--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -1,10 +1,17 @@
 telethon==1.36.0
-   pytz==2023.3
-   deep-translator==1.11.4
-   requests==2.32.3
-   asyncio
-   APScheduler==3.10.4
-   aiosqlite==0.20.0
-   jdatetime==5.1.0
-   filetype==1.2.0
-   PySocks==1.7.1
+pytz==2023.3
+deep-translator==1.11.4
+requests==2.32.3
+APScheduler==3.10.4
+aiosqlite==0.20.0
+jdatetime==5.1.0
+filetype==1.2.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+qrcode==7.4.2
+Pillow==10.4.0
+numpy>=1.26.0
+pydub==0.25.1
+moviepy==1.0.3
+rembg==2.0.59
+pyzbar==0.1.9
